docs : auth
